# pretix-paykeeper

./: .gitignore  README.md  pretixplugin.toml  pyproject.toml
pretix_paykeeper/: __init__.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_paykeeper/locale/ru/LC_MESSAGES/: django.po
pretix_paykeeper/templates/pretix_paykeeper/email/: failure_summary.txt  periodic_check_failures.txt
